css/styles.css
@charset "utf-8";
/* CSS Document */

/* ***************************************
   Basic Browser inconsistencies fixes
   pertaining to current project
   Selective pieces come from normalize.css v7.0.0
   For more info visit: https://necolas.github.io/normalize.css/
****************************************** */

html {
  line-height: 1.15; /* Give consistent line height in all browsers */
  -ms-text-size-adjust: 100%; /* Prevent font size adjustments after orientation changes in IE and Windows phones */
  -webkit-text-size-adjust: 100%; /* Prevent font size adjustments after orientation changes in iOS */
}

/* Correct HTML 5 elements for use in IE9 */

article,
aside,
footer,
header,
nav,
section,
figcaption,
figure,
main { 
  display: block;
}

/* Add the correct margin in IE 8. */

figure {
  margin: 1em 40px;
}

/* Add the correct font weight in Chrome, Edge, and Safari, 
   Without doubling it in Safari 6 */
b,
strong {
  font-weight: inherit;
  font-weight: bolder;
}



/* ********************************************
    Global Styles 
*********************************************** */

/*  include padding and border in total width and height */

* {
   box-sizing: border-box;
}

body {
   /* Remove predifined margins and padding */
   margin:0; 
   padding: 0;
   
   font-family: 'Lato', sans-serif;
   font-size: 1.1rem;
   color: #888;
}

h1,
h2 {
   font-family: 'Raleway', sans-serif;
}

h1, 
h2,
h3,
h4 {
   color:#333;
}

/* remove underline of links */

a {
   text-decoration: none;
}

/* remove bullets from list items */

ul li {
   list-style-type: none;
}

footer,
nav {
   background-color:#BAA3C4;
}

/* ********************************************
    Navigation
*********************************************** */

/* use flexbox in nav to make it easier to rearrange after breakpoints */
nav, 
.flex-container {
   display: -ms-flexbox;      /* Flexbox for IE 10 */
   display: flex;
   text-align: center;
}

.main-nav {
   flex-direction: column;
   border-bottom: #632C72 solid 3px;
   align-items: center;
}

/* keep li items from offsetting from under title */
nav ul {
   padding-left: 0;
}

nav,
nav a {
   font-weight: bold;
   color: #333333;
  }


nav a {
   display: inline-block;
   text-transform: uppercase;  
   padding-top: 10px;
   padding-bottom: 10px;
   -webkit-transition: color .5s; /* Safari */
   transition: color .5s;
}

nav .active,
nav a:hover,
nav h1 {
   color: #fff;
}

nav h1 {
   text-align: center;
   margin-bottom: 15px;
}

/* ********************************************
    Header
*********************************************** */


header {
   text-align: center;
   line-height: 1.4rem;
   display: -ms-flexbox;      /* Flexbox for IE 10 */
   display: flex;
   flex-direction: column-reverse; /* place image above text in header */
   align-items: center;
   margin: 50px 20px 0 20px;
}

#profile-image {
    max-width: 80%;

}

/* ********************************************
    Main Content
*********************************************** */

.wrapper {
   margin: 100px 10Px;
   text-align: center;
}

.flex-container {
   flex-direction: column;
}

/* fade cards into full opacity when mouse is hovered over them */

.card {
   margin-top: 25px;
   opacity: .7;
   transition: all, 1.3s;
}

.card:hover {
   opacity: 1;
}

.card img {
   width: 100%;
}

.card p {
   padding-left: 10px;
   padding-right: 10px;
}

/* ********************************************
    Footer
*********************************************** */

footer {
   border-top: #632C72 solid 3px;
   padding: 45px 25px;
   /* make footer extra tall. why? i don't know but that's what the mock up has. */
   height: 125px;
}

/*place name on far left, anchor on far right */
.footer-nav {
   flex-direction: row;
   -ms-justify-content: space-between; /* IE 10 */
   justify-content: space-between;
}

/* line up name in footer with anchor on right */
.footer-nav h3 {
   margin: 10px 0;
}

.footer-ul {
   display: none;
}

#back-top {
   background-color: rgba(99,44,114,0.50);
   border-radius: 5%;
   border: 3px solid #632C72;
   padding-left: 5px;
   padding-right: 5px;
   -webkit-transition: all .5s; /* Safari */
   transition: all .5s;
}

#back-top:hover {
    background-color: rgba(99,44,114,1);
}

/* ********************************************
    Media Queries
*********************************************** */

@media screen and (min-width: 768px) {
   
   /* display nav elements horizontally */
   
   nav li {   
      display: inline;
   }
   
   .main-nav li {
      padding: 0 25px;
   }
   
   header {
      flex-direction: row;
   }
   
   #profile-image {
      max-width: 100%;
   }
   
   header  {
      margin-left: 35px;
      margin-right: 35px;
   }
   
   .header-text {
      font-size: 1.2rem;
      line-height: 1.6rem;
      padding-right: 25px;
   }
   
   .flex-container {
      padding-left: 1%;
      padding-right: 1%;
      flex-flow: row wrap;
      justify-content: space-around;      
   }
   
   .card {
      width: 48%;
   }
   
   #contact {
      margin-left: 5%;
      margin-right: 5%;
   }
    
   /* override card width for contacts, because its the only one in div */
   #contact .card {
      width: 100%;
      padding-left: 5%;
      padding-right: 5%;
   }
   
   footer {
      padding-top: 25px;
   }
   
   /* display multi item nav on larger screens */
   .footer-ul {
      margin-top: 0;
      display: block;
   }
   footer li {
      padding: 0 15px;
   }
   
   /* hide "back to top" link on larger screens */
   #back-top {
      display: none;
   }
} /* end 768px media query */

